# knowva-reading

./: .gitignore  CLAUDE.md  README.md  draft_requirements.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/knowva/: config.py  main.py
backend/src/knowva/agents/: __init__.py
backend/src/knowva/agents/common/: __init__.py  tools.py
backend/src/knowva/agents/mentor/: __init__.py  agent.py  tools.py
backend/src/knowva/agents/onboarding/: __init__.py  agent.py  tools.py
backend/src/knowva/agents/orchestrator/: agent.py
backend/src/knowva/agents/profile_interview/: __init__.py  agent.py  tools.py
backend/src/knowva/agents/reading/: __init__.py  agent.py  tools.py
backend/src/knowva/agents/reading/book_guide/: __init__.py  agent.py  tools.py
backend/src/knowva/agents/reading_reflection/: agent.py  tools.py
backend/src/knowva/agents/report/: __init__.py  agent.py  tools.py
backend/src/knowva/data/: __init__.py  badges.py
backend/src/knowva/middleware/: firebase_auth.py  rate_limit.py
backend/src/knowva/models/: action_plan.py  badge.py  message.py  mood.py  onboarding.py  profile.py  reading.py  report.py  session.py
backend/src/knowva/routers/: badges.py  mentor.py  moods.py  onboarding.py  profile.py  readings.py  reports.py  sessions.py  timeline.py
backend/src/knowva/services/: badge_service.py  firestore.py  session_service.py
docs/: agents.md  architecture.md  hackathon.md  requirements.md  tasks.md  tech-stack.md
frontend/: apphosting.yaml  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx
(+68 files in other folders)
